src/test/ui/consts/const-integer-bool-ops.stderr
error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:11:18
   |
LL | const X: usize = 42 && 39;
   |                  ^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:11:24
   |
LL | const X: usize = 42 && 39;
   |                        ^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:11:18
   |
LL | const X: usize = 42 && 39;
   |                  ^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:18:18
   |
LL | const ARR: [i32; X] = [99; 34];
   |                  ^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:21:19
   |
LL | const X1: usize = 42 || 39;
   |                   ^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:21:25
   |
LL | const X1: usize = 42 || 39;
   |                         ^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:21:19
   |
LL | const X1: usize = 42 || 39;
   |                   ^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:28:19
   |
LL | const ARR1: [i32; X1] = [99; 47];
   |                   ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:31:19
   |
LL | const X2: usize = -42 || -39;
   |                   ^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:31:26
   |
LL | const X2: usize = -42 || -39;
   |                          ^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:31:19
   |
LL | const X2: usize = -42 || -39;
   |                   ^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:38:19
   |
LL | const ARR2: [i32; X2] = [99; 18446744073709551607];
   |                   ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:41:19
   |
LL | const X3: usize = -42 && -39;
   |                   ^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:41:26
   |
LL | const X3: usize = -42 && -39;
   |                          ^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:41:19
   |
LL | const X3: usize = -42 && -39;
   |                   ^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:48:19
   |
LL | const ARR3: [i32; X3] = [99; 6];
   |                   ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:51:18
   |
LL | const Y: usize = 42.0 == 42.0;
   |                  ^^^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:54:19
   |
LL | const ARRR: [i32; Y] = [99; 1];
   |                   ^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:57:19
   |
LL | const Y1: usize = 42.0 >= 42.0;
   |                   ^^^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:60:20
   |
LL | const ARRR1: [i32; Y1] = [99; 1];
   |                    ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:63:19
   |
LL | const Y2: usize = 42.0 <= 42.0;
   |                   ^^^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:66:20
   |
LL | const ARRR2: [i32; Y2] = [99; 1];
   |                    ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:69:19
   |
LL | const Y3: usize = 42.0 > 42.0;
   |                   ^^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:72:20
   |
LL | const ARRR3: [i32; Y3] = [99; 0];
   |                    ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:75:19
   |
LL | const Y4: usize = 42.0 < 42.0;
   |                   ^^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:78:20
   |
LL | const ARRR4: [i32; Y4] = [99; 0];
   |                    ^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:81:19
   |
LL | const Y5: usize = 42.0 != 42.0;
   |                   ^^^^^^^^^^^^ expected usize, found bool

error[E0080]: evaluation of constant value failed
  --> $DIR/const-integer-bool-ops.rs:84:20
   |
LL | const ARRR5: [i32; Y5] = [99; 0];
   |                    ^^ referenced constant has errors

error: aborting due to 28 previous errors

Some errors occurred: E0080, E0308.
For more information about an error, try `rustc --explain E0080`.
